hphp/test/quick/upper-bounds/prop-redefine-multi-ub.php.expectf
object(Sub1) (0) {
}

Catchable fatal error: Sub2::x must have a type of Barable as defined by the upper-bound in Sup in %s/prop-redefine-multi-ub.php on line 19
